[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "Reusable maze generator library for A-Maze-ing (42 project)"
readme = "README_mazegen.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["maze", "generator", "42", "algorithm"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment :: Puzzle Games",
]

dependencies = []   # pure stdlib — no external deps

[project.optional-dependencies]
dev = ["mypy", "flake8", "pytest", "build"]

[tool.setuptools.packages.find]
where = ["."]
include = ["mazegen*"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
check_untyped_defs = true