[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "Reusable maze generator for A-Maze-ing (42 project)"
requires-python = ">=3.10"
license = "MIT"

[tool.setuptools.packages.find]
where = ["."]
include = ["mazegen*"]
